Added kubernetes files

--- a/app/server/ArgoCD/ArgoCD-Web-App/.env
+++ b/app/server/ArgoCD/ArgoCD-Web-App/.env
@@ -1,3 +1,5 @@
+CRONJOB_URL=localhost:50059
+ARGOCD_TEST_URL=https://127.0.0.1:8081/api/v1/applications
 MONGO_URL=mongodb://mongouser:mongopassword@localhost:27017/admin
 USER_EMAIL=f219521@cfd.nu.edu.pk
 JWT_SECRET="wait_a_minute"
