fixed client errors

--- a/k8s/client.yaml
+++ b/k8s/client.yaml
@@ -29,12 +29,12 @@ spec:
     spec:
       containers:
         - name: client
-          image: mraza176/citrusops-client:v1
+          image: mraza176/citrusops-client:v3
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
           env:
             - name: NEXT_PUBLIC_BACKEND_URL
-              value: "http://localhost:8000"
+              value: "http://135.171.200.237:8000"
             - name: NEXT_PUBLIC_BACKEND_WS_URL
-              value: "ws://localhost:8000"
+              value: "ws://135.171.200.237:8000"
